Modularize codebase and add ES module build
Refactored the project to use a modular TypeScript structure under src/, including new modules for data, dice, types, and generator logic. Updated build scripts in package.json, added a dist/ output directory, and switched index.html to load the compiled ES module entry point. Enhanced README with setup, build, and development instructions. Legacy generator files are retained for reference but are no longer used.

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -10,6 +10,19 @@
 			],
 			"group": "build",
 			"label": "tsc: watch - tsconfig.json"
+		},
+		{
+			"label": "build: tsc",
+			"type": "shell",
+			"command": "npm",
+			"args": [
+				"run",
+				"build"
+			],
+			"problemMatcher": [
+				"$tsc"
+			],
+			"group": "build"
 		}
 	]
 }
